# SkySaver

./: .gitignore  README.md  csv_converter.py  flight_query_executor.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: et_model_hyperparameters_config.json  models_hyperparameters_config.json  preproccessing_config.json
deployment/: app.py  app_test.py  mappers.json  requirements.txt
deployment/.streamlit/: config.toml
experiments/: check.ipynb  currency_converter.ipynb  data_deep_dive.ipynb  data_deep_dive2.ipynb  feature_experiments.ipynb  hyperparameter_optimization.ipynb  model_test.ipynb  model_test2.ipynb  model_test3.ipynb  query_generator.ipynb
models/: country_gbc_model_v0.1.pkl  notepad copy.ipynb  notepad.ipynb  regression_model.pkl
output/: Query4_results_datefix.csv
src/: 0_flight_query_executor.py  1_csv_converter.py  2_data_preprocessor.py  3_model_creator.py  4_model_tester.py  csv_converter.py  data_preprocessor.py  data_preprocessor_v2.py  flight_query_executor.py  model_creator.py  model_tester.py
src/html_pages/: AL_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  AL_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  AL_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  AU_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  AU_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  AU_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  BR_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  BR_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  BR_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  CH_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  CH_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  CH_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  DE_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  DE_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  DE_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  GB_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  GB_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  GB_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  ID_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  ID_FRA_to_YVR_on_18.05.2024_back_31.05.2024.html  ID_HKG_to_BKK_on_02.06.2024_back_25.06.2024.html  JP_FRA_to_YVR_on_06.05.2024_back_31.05.2024.html  (+9 more)
tests/: test_data_preprocessor.py
(+26 files in other folders)
