[tool.poetry]
name = "playwright-trial"
version = "0.1.0"
description = ""
authors = ["Arash"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
httpx = "^0.26.0"
playwright = "^1.41.2"
bs4 = "^0.0.2"
pandas = "<2.1.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.2"
scipy = "^1.10.0"
statsmodels = ">=0.14.1"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.0"
xgboost = "^2.0.3"
hyperopt = "^0.2.7"
pkg = "^0.2"
bayesian-optimization = "^1.4.3"
pycaret = "^2.2"
optuna = "^3.5.0"
forex-python = "^1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
